file upload implemented

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
             <img src="./icons/stickynotes.svg" alt="sticky" class="tool-img sticky">
         </div>
         <div class="tool">
-            <img src="./icons/upload.svg" alt="upload" class="tool-img upload">
+            <a href="" id="fileSelector">
+                <img src="./icons/upload.svg" alt="upload" class="tool-img upload">
+            </a>
+            <input type="file" id="fileInput" accept="image/*">
         </div>
         <div class="tool">
             <img src="./icons/download.svg" alt="download" class="tool-img download">
@@ -94,5 +97,6 @@
     <script src="draw.js"></script>
     <script src="dbScript.js"></script>
     <script src="download.js"></script>
+    <script src="upload.js"></script>
 </body>
 </html>
